<resources>
    <string name="app_name">My Movie</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Movies</string>
    <string name="tab_text_3">Tv Shows</string>
    <string name="tab_text_4">Contact Us</string>
    <string name="test">Test</string>
    <string name="menu_1">Settings</string>
    <string name="see_all">See All</string>
    <string name="judul_film">Title</string>
    <string name="tahun">(Year)</string>
    <string name="rating">Rating</string>
    <string name="rating_default">5.0</string>
    <string name="link">Link website</string>
    <string name="full_description">Full Description</string>
    <string name="lorem">lorem ipsum dolor sit amet</string>
    <string name="overview">Overview</string>
    <string name="trailer">Trailer</string>
    <string name="play_youtube">Play</string>
    <string name="made_by">Made By Patricia Fiona</string>
    <string name="myEmail">patriciafiona3@gmail.com</string>
    <string-array name="data_judul_movie">
        <item>Alita: Battle Angel</item>
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Bohemian Rhapsody</item>
        <item>Creed II</item>

        <item>How To Train Your Dragon-The Hidden World</item>
        <item>Avengers: Infinity War</item>
        <item>Glass</item>
        <item>Mortal Engines</item>
        <item>Spider-Man: Into the Spider-Verse</item>
    </string-array>
    <string-array name="data_desc_movie">
        <item>When Alita awakens with no memory of who she is in a future world she does not recognize,
            she is taken in by Ido, a compassionate doctor who realizes that somewhere in this abandoned
            cyborg shell is the heart and…</item>
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally.
            She has just about given up on her dream to make it big as a singer — until Jack coaxes her
            into the spotlight. But even…</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater
            kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans
            to conquer the remaining oceanic people…</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John
            Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970.
            Hit songs become instant classics.…</item>
        <item>Between personal obligations and training for his next big fight against an opponent
            with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</item>

        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless\’ discovery of
            an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup\’s
            reign as village chief is tested…</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large
            for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos.
            A despot of intergalactic infamy…</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural
            abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities.
            Meanwhile, the shadowy presence…</item>
        <item>Many thousands of years in the future, Earth\’s cities roam the globe on huge wheels,
            devouring each other in a struggle for ever diminishing resources.
            On one of these massive traction cities, the old London, Tom…</item>
        <item>Miles Morales is juggling his life between being a high school student and being a
            spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the
            Spider-Verse are transported to this dimension.</item>

    </string-array>
    <string-array name="data_year_movie">
        <item>(2019)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2018)</item>

        <item>(2019)</item>
        <item>(2018)</item>
        <item>(2019)</item>
        <item>(2018)</item>
        <item>(2018)</item>
    </string-array>
    <string-array name="data_ratting_movie">
        <item>69</item>
        <item>75</item>
        <item>68</item>
        <item>80</item>
        <item>67</item>

        <item>77</item>
        <item>83</item>
        <item>66</item>
        <item>60</item>
        <item>60</item>
        <item>84</item>
    </string-array>
    <string-array name="link_trailer_movie">
        <item>cislZ9S0ocA</item>
        <item>nSbzyEJ8X9E</item>
        <item>WDkg3h8PCVU</item>
        <item>mP0VHJYFOAU</item>
        <item>ApQbQ0iJQO0</item>

        <item>SkcucKDrbOI</item>
        <item>6ZfuNTqbHE8</item>
        <item>95ghQs5AmNk</item>
        <item>IRsFc2gguEg</item>
        <item>g4Hbz2jLxvQ</item>
    </string-array>
    <string-array name="link_web_movie">
        <item>https://www.themoviedb.org/movie/399579-alita-battle-angel?language=en-US</item>
        <item>https://www.themoviedb.org/movie/332562-a-star-is-born?language=en-US</item>
        <item>https://www.themoviedb.org/movie/297802-aquaman?language=en-US</item>
        <item>https://www.themoviedb.org/movie/424694-bohemian-rhapsody?language=en-US</item>
        <item>https://www.themoviedb.org/movie/480530-creed-ii?language=en-US</item>

        <item>https://www.themoviedb.org/movie/166428-how-to-train-your-dragon-3?language=en-US</item>
        <item>https://www.themoviedb.org/movie/299536-avengers-infinity-war</item>
        <item>https://www.themoviedb.org/movie/450465-glass?language=en-US</item>
        <item>https://www.themoviedb.org/movie/428078-mortal-engines?language=en-US</item>
        <item>https://www.themoviedb.org/movie/324857-spider-man-into-the-spider-verse</item>
    </string-array>
    <string-array name="data_judul_tv">
        <item>Dragon Ball</item>
        <item>Family Guy</item>
        <item>The Flash</item>
        <item>Game Of Thrones</item>
        <item>Hanna</item>

        <item>Naruto Shipudden</item>
        <item>NCIS</item>
        <item>Supergirl</item>
        <item>Supernatural</item>
        <item>The Simpsons</item>
    </string-array>
    <string-array name="data_desc_tv">
        <item>Long ago in the mountains, a fighting master known as Gohan discovered a strange boy whom he named Goku. Gohan raised him and trained Goku in martial arts until he died. The young and very strong boy was on his own, but easily managed. Then one day, Goku met a teenage girl named Bulma, whose search for the mystical Dragon Balls brought her to Goku\'s home. Together, they set off to find all seven and to grant her wish.</item>
        <item>Sick, twisted, politically incorrect and Freakin\' Sweet animated series featuring the adventures of the dysfunctional Griffin family. Bumbling Peter and long-suffering Lois have three kids. Stewie (a brilliant but sadistic baby bent on killing his mother and taking over the world), Meg (the oldest, and is the most unpopular girl in town) and Chris (the middle kid, he\'s not very bright but has a passion for movies). The final member of the family is Brian - a talking dog and much more than a pet, he keeps Stewie in check whilst sipping Martinis and sorting through his own life issues.</item>
        <item>After a particle accelerator causes a freak storm, CSI Investigator Barry Allen is struck by lightning and falls into a coma. Months later he awakens with the power of super speed, granting him the ability to move through Central City like an unseen guardian angel. Though initially excited by his newfound powers, Barry is shocked to discover he is not the only "meta-human" who was created in the wake of the accelerator explosion — and not everyone is using their new powers for good. Barry partners with S.T.A.R. Labs and dedicates his life to protect the innocent. For now, only a few close friends and associates know that Barry is literally the fastest man alive, but it won\'t be long before the world learns what Barry Allen has become…The Flash.</item>
        <item>Seven noble families fight for control of the mythical land of Westeros. Friction between the houses leads to full-scale war. All while a very ancient evil awakens in the farthest north. Amidst the war, a neglected military order of misfits, the Night\'s Watch, is all that stands between the realms of men and icy horrors beyond.</item>
        <item>This thriller and coming-of-age drama follows the journey of an extraordinary young girl as she evades the relentless pursuit of an off-book CIA agent and tries to unearth the truth behind who she is. Based on the 2011 Joe Wright film.</item>

        <item>Naruto Shippuuden is the continuation of the original animated TV series Naruto.The story revolves around an older and slightly more matured Uzumaki Naruto and his quest to save his friend Uchiha Sasuke from the grips of the snake-like Shinobi, Orochimaru. After 2 and a half years Naruto finally returns to his village of Konoha, and sets about putting his ambitions to work, though it will not be easy, as He has amassed a few (more dangerous) enemies, in the likes of the shinobi organization; Akatsuki.</item>
        <item>From murder and espionage to terrorism and stolen submarines, a team of special agents investigates any crime that has a shred of evidence connected to Navy and Marine Corps personnel, regardless of rank or position.</item>
        <item>Twenty-four-year-old Kara Zor-El, who was taken in by the Danvers family when she was 13 after being sent away from Krypton, must learn to embrace her powers after previously hiding them. The Danvers teach her to be careful with her powers, until she has to reveal them during an unexpected disaster, setting her on her journey of heroism.</item>
        <item>When they were boys, Sam and Dean Winchester lost their mother to a mysterious and demonic supernatural force. Subsequently, their father raised them to be soldiers. He taught them about the paranormal evil that lives in the dark corners and on the back roads of America … and he taught them how to kill it. Now, the Winchester brothers crisscross the country in their \'67 Chevy Impala, battling every kind of supernatural threat they encounter along the way. </item>
        <item>Set in Springfield, the average American town, the show focuses on the antics and everyday adventures of the Simpson family; Homer, Marge, Bart, Lisa and Maggie, as well as a virtual cast of thousands. Since the beginning, the series has been a pop culture icon, attracting hundreds of celebrities to guest star. The show has also made name for itself in its fearless satirical take on politics, media and American life in general.</item>
    </string-array>
    <string-array name="data_year_tv">
        <item>(1986)</item>
        <item>(1999)</item>
        <item>(2014)</item>
        <item>(2011)</item>
        <item>(2019)</item>

        <item>(2007)</item>
        <item>(2003)</item>
        <item>(2015)</item>
        <item>(2005)</item>
        <item>(1989)</item>
    </string-array>
    <string-array name="data_ratting_tv">
        <item>71</item>
        <item>65</item>
        <item>67</item>
        <item>81</item>
        <item>67</item>

        <item>76</item>
        <item>68</item>
        <item>59</item>
        <item>74</item>
        <item>72</item>
    </string-array>
</resources>