<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_02_400x700"
    tools:context=".Activities.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/btn_back_main_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_arrow_back_24dp"
            app:layout_constraintBottom_toTopOf="@+id/detail_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/detail_poster"
            style="@style/detail_poster"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/detail_judul"
            style="@style/detail_judul"
            android:layout_marginTop="32dp"
            android:text="@string/judul_film"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detail_tahun"
            style="@style/detail_tahun"
            android:text="@string/tahun"
            app:layout_constraintStart_toEndOf="@+id/detail_poster"
            app:layout_constraintTop_toBottomOf="@+id/detail_judul" />

        <TextView
            android:id="@+id/textView"
            style="@style/detail_rating_tx"
            android:text="@string/rating"
            app:layout_constraintStart_toEndOf="@+id/detail_poster"
            app:layout_constraintTop_toBottomOf="@+id/detail_tahun" />

        <RatingBar
            android:id="@+id/ratingBar_movie"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/detail_poster"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/ratting_text_movie"
            style="@style/detail_rating_text"
            android:text="@string/rating_default"
            app:layout_constraintStart_toEndOf="@+id/ratingBar_movie"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            style="@style/detail_overview_tx"
            android:text="@string/overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_poster" />

        <TextView
            android:id="@+id/detail_overview_movie"
            style="@style/detail_overview_text"
            android:text="@string/lorem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            style="@style/detail_trailer_tx"
            android:text="@string/trailer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_overview_movie" />

        <view
            android:id="@+id/view_movie_video"
            class="com.google.android.youtube.player.YouTubePlayerView"
            style="@style/detail_yt_view"
            app:layout_constraintBottom_toTopOf="@+id/YT_play_01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/YT_play_01"
            style="@style/detail_btn_yt"
            android:text="@string/play_youtube"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_movie_video" />

        <TextView
            android:id="@+id/textView4"
            style="@style/detail_link_web_tx"
            android:text="@string/full_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/YT_play_01" />

        <TextView
            android:id="@+id/link_web_movie"
            style="@style/detail_link_web_text"
            android:text="@string/link"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>